add basic version of Bellman-Ford algorithm with step list
