# API/main.py
@@ -1,8 +1,6 @@
 from flask import Flask, request, jsonify
 from flask_swagger_ui import get_swaggerui_blueprint
-from models.graph import BFSGraph, DFSGraph, KruskalGraph, PrimDijkstraGraph, DijkstraGraph
-from models.edge import Edge, edge_sort
-from bisect import insort
+from models.graph import BFSGraph, BellmanFordGraph, DFSGraph, KruskalGraph, PrimDijkstraGraph, DijkstraGraph
 
 app = Flask(__name__, template_folder='swagger/templates')
 app.config['RESTPLUS_MASK_SWAGGER'] = False
@@ -61,7 +59,6 @@ def PrimDijkstra():
 
 @app.route("/api/Dijkstra", methods=['POST'])
 def Dijkstra():
-    print(l.index(1))
     request_data = request.get_json(force=True)
     vertices = request_data['vertices']
     adjacency_list = request_data['adjacency_list']
@@ -70,6 +67,16 @@ def Dijkstra():
     graph = DijkstraGraph(vertices, adjacency_list, weights, current_vertex)
     return jsonify(graph.find_shortest_paths())
 
+
+@app.route("/api/BellmanFord", methods=['POST'])
+def BellmanFord():
+    request_data = request.get_json(force=True)
+    vertices = request_data['vertices']
+    adjacency_list = request_data['adjacency_list']
+    weights = request_data['weights']
+    current_vertex = request_data['start_vertex']
+    graph = BellmanFordGraph(vertices, adjacency_list, weights, current_vertex)
+    return jsonify(graph.find_shortest_paths())
 
 if __name__ == '__main__':
     app.register_blueprint(swaggerui_blueprint, url_prefix=SWAGGER_URL)
